# RykkerBob_Executer

./: 1. Orientering til ejer vedr. rykker for paabegyndelse.docx  2. Orientering til ejer vedr. rykker for paabegyndelse.docx  BFENummer.sql  CheckIfEmailSent.py  Datastore.py  GetCaseInfoAndCheckCaseState.py  GetKmdAcessToken.py  NovaLogin.py  README.md  Sandbox.py  SendBomEmail.py  SendDigitalPost.py  SendSMTPMail.py  main.py  pyproject.toml
robot_framework/: __main__.py  config.py  exceptions.py  initialize.py  process.py  queue_framework.py  reset.py
