[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 10.*",
    aiofiles           23.2.1
    annotated-types    0.7.0
    anyio              4.8.0
    attrs              25.1.0
    bidict             0.23.1
    certifi            2025.1.31
    cffi               1.17.1
    charset-normalizer 3.4.1
    click              8.1.8
    colorama           0.4.6
    croniter           6.0.0
    cryptography       44.0.1
    fastapi            0.109.2
    greenlet           3.1.1
    h11                0.14.0
    httpcore           1.0.7
    httptools          0.6.4
    httpx              0.28.1
    idna               3.10
    ifaddr             0.2.0
    itsdangerous       2.2.0
    jinja2             3.1.5
    lxml               5.3.1
    markdown2          2.4.10
    markupsafe         3.0.2
    nicegui            1.4.12
    numpy              2.2.3
    openorchestrator   1.3.0
    orjson             3.10.15
    outcome            1.3.0.post0
    pandas             2.2.3
    pscript            0.7.7
    pycparser          2.22
    pydantic           2.10.6
    pydantic-core      2.27.2
    pygments           2.19.1
    pyodbc             5.2.0
    pysocks            1.7.1
    python-dateutil    2.9.0.post0
    python-docx        1.1.2
    python-dotenv      1.0.1
    python-engineio    4.11.2
    python-multipart   0.0.6
    python-socketio    5.12.1
    pytz               2025.1
    pyyaml             6.0.2
    requests           2.32.3
    selenium           4.28.1
    simple-websocket   1.1.0
    six                1.17.0
    sniffio            1.3.1
    sortedcontainers   2.4.0
    sqlalchemy         2.0.38
    starlette          0.36.3
    trio               0.29.0
    trio-websocket     0.12.1
    typing-extensions  4.12.2
    tzdata             2025.1
    urllib3            2.3.0
    uvicorn            0.34.0
    vbuild             0.8.2
    watchfiles         0.24.0
    websocket-client   1.8.0
    websockets         15.0
    wsproto            1.2.0
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
